# OSAI

./: .gitignore  BROWSER-REPLACE-CHROME.md  CLAUDE.md  HANDOFF-SESSION.md  IDLE-DASHBOARD-PLAN.md  LICENSE  ONBOARDING.md  PLAN-chat-engines.md  PLAN-chatpane-daily-driver.md  PLAN-chatpane-steer-usage-detach.md  PLAN-control-plane.md  PLAN-model-agnostic.md  PLAN-uiux-polish.md  PLAN-wave5-styling.md  PLAN-windows-fix-and-sync.md  POLISH-PLAN.md  README.md  RELEASING.md  TELEMETRY-PLAN.md  TESTING-psmux.md  TRACKER.md  WINDOWS-PORT.md  WINDOWS.md  audit-synthesis.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.jsonc
.github/workflows/: build.yml  cloudflare-pages.yml
aios-bridge/mcp/aios-control/: index.js  package-lock.json  package.json
docs/: frame.sh
docs/cover/: cover.html
docs/research/: codex-desktop-steal-list.md
docs/superpowers/plans/: 2026-06-01-aios-best-memory-system-plan.md  2026-06-01-aios-codex-grade-thread-system.md  2026-06-01-aios-master-commercial-superapp-plan.md  2026-06-01-browser-pane-groups-plan.md  2026-06-01-command-registry-plan.md  2026-06-01-composer-v3-plan.md  2026-06-01-control-plane-mcp-plan.md  2026-06-01-model-provider-registry-plan.md  2026-06-01-pane-window-manager-plan.md  2026-06-01-right-rail-artifacts-review-plan.md  2026-06-03-jarvis-control-center-dashboard.md
functions/api/: chat.ts
misc/: BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  NOTIFICATIONS-PLAN.md  PLAN-build-02-framed.md  PLAN-chat-power.md  PLAN-chatpane-history-and-navigation.md  PLAN-control-plane.md  PLAN-customizable-sidebar.md  PLAN-living-cockpit.md  PLAN-model-agnostic.md  PLAN-notes-stone-chisel.md  PLAN-odysseus-feel.md  PLAN-odysseus-hybrid.md  PLAN-projects-workspaces.md  PLAN-redesign-neon-glass.md  PLAN-scheduled-agents.md  PLAN-superapp-uiux.md  PLAN-wave4.md  PLAN-windows-fix-and-sync.md  PLAN-work-sessions.md  PRUNE-LIST.md  REVIEW-2026-06-22-go-to-harness.md  REVIEW-2026-06-29-chatpane-subagents-scroll-firaz.md  SPIKE-screencapturekit.md  TRACKER-build-02-framed.md  TRACKER-chatpane-history.md
misc/backups/: ChatPane.2026-06-19.tsx.bak  ChatPane.2026-06-21.tsx.bak  Settings.2026-06-22.tsx.bak
osai-bridge/mcp/osai-control/: index.js  package-lock.json  package.json
outputs/: 2026-05-31-launch-ph-hn.md  2026-06-01-browser-pane-native-deep-dive.md
scratchpad/: chat-full-01-lanes.html  chat-full-02-framed.html  chat-full-03-doc.html  chat-full-04-hybrid.html  chatpane-lab.html  chatpane-redesign.html  chrome-redesign.html  composer-lab.html  filespane-redesign.html  historypane-redesign.html  mission-control.html  neon-glass-mock.html  pulse-dataviz.html  settings-sectioned.html  terminal-hud.html
scripts/: aios-launch.ps1  aios-sync.ps1  aios-watch.ps1  fetch-psmux.ps1  make-latest-json.ps1  osai-launch.ps1  osai-sync.ps1  osai-watch.ps1  run.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: gen-installer-images.ps1
src-tauri/resources/: .gitkeep
src-tauri/src/: apikeys.rs  appcast.rs  bridges.rs  browser.rs  browser_store.rs  chat.rs  chat_api.rs  chat_history.rs  control.rs  device.rs  diag.rs  files.rs  lib.rs  lsp.rs  mac_apps.rs  main.rs  memory.rs  model_catalog.rs  monitor.rs  oracles.rs  plugins.rs  proc.rs  pty.rs  snc.rs  stats.rs  telemetry.rs  usage.rs  voice.rs  wincast.rs
src/components/: AccountMenu.tsx  AppAttachPane.tsx  AppCastPane.tsx  AttachAppsPane.tsx  BridgesPane.tsx  BrowserPane.tsx  ChatPane.tsx  ChatTabStrip.tsx  CommandPalette.tsx  EditorPane.tsx  FileFinder.tsx  FileViewerPane.tsx  FilesPane.tsx  FloatingWindow.tsx  GlobalSearch.tsx  HistoryPane.tsx  IdleControlCenter.tsx  IdleDashboard.tsx  MirrorViewer.tsx  MoneyAgentsPane.tsx  MoneyAgentsSection.tsx  NotesPane.tsx  OfficePreview.tsx  Onboarding.tsx  OracleRoster.tsx  PaneDropZone.tsx  PaneErrorBoundary.tsx  PaneMenu.tsx  PetPane.tsx  PluginsPane.tsx  ProjectsPane.tsx  PulsePane.tsx  ResizableGrid.tsx  RunCinema.tsx  ScheduledAgentsPane.tsx  ScheduledAgentsSection.tsx  Settings.tsx  ShortcutHud.tsx  SidebarUsage.tsx  TerminalComposer.tsx  (+8 more)
src/components/chat/: AgentStep.tsx  Bubbles.tsx  FleetDock.tsx  FleetView.tsx  InteractionCards.tsx  Markdown.tsx  ThinkingBlock.tsx  context.ts  format.ts  overlays.tsx  useTypewriter.ts
src/components/chat/composer/: ModelMenu.tsx  deck.tsx
src/components/dashboard/: UsageGlance.tsx
src/components/fx/: BlurFade.tsx  BlurText.tsx  BorderBeam.tsx  ClickSpark.tsx  Confetti.tsx  DotPattern.tsx  HoverBorderGradient.tsx  Magnet.tsx  MotionRoot.tsx  NumberTicker.tsx  Ripple.tsx  SlidingIndicator.tsx  SplitText.tsx  Spotlight.tsx  TiltCard.tsx  cn.ts  dockMagnify.ts  funFx.ts  motionTokens.ts  reducedMotion.ts  spotlightGlow.ts  useRotatingPlaceholder.ts  useVanish.ts
src/components/pet/: PetBody.tsx  PetOverlay.tsx
src/lib/: agentActions.test.ts  agentActions.ts  agentController.test.ts  agentController.ts  apiKeys.ts  apiMessages.test.ts  apiMessages.ts  appCommands.ts  appcast.ts  appearance.ts  apps.ts  bridges.ts  browser-mem.ts  browser.ts  bundleBoundaries.test.ts  chat.ts  chatBranching.test.ts  chatBranching.ts  chatFences.test.ts  chatFences.ts  chatHistory.ts  chatPaneState.test.ts  chatPaneState.ts  chatScroll.test.ts  chatScroll.ts  chatStream.test.ts  chatStream.ts  chatTimeline.test.ts  chatTimeline.ts  chatTree.test.ts  chatTree.ts  chatTreePersist.test.ts  chatTreePersist.ts  commands.ts  conductor.test.ts  conductor.ts  control.test.ts  control.ts  controlCenter.test.ts  controlCenter.ts  (+89 more)
src/lib/lsp/: client.ts  manager.ts  monacoBridge.ts  protocol.test.ts  protocol.ts  transport.ts
src/lib/pet/: engine.test.ts  engine.ts  store.ts  voice.test.ts  voice.ts
workers/mirror/: wrangler.jsonc
workers/mirror/src/: index.ts
