[package]
name = "osai"
version = "2.1.2"
description = "OSAI — your AI co-founder's command deck"
authors = ["Jul.Nazz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "osai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools`: keep the WKWebView Web Inspector available in RELEASE builds too
# (not just debug) — firaz uses this app as his dev browser, so `open_devtools`
# must compile in the shipped binary, hence the explicit feature (the API is
# otherwise gated behind `debug_assertions`).
tauri = { version = "2", features = ["unstable", "protocol-asset", "devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
# In-app self-update: `relaunch()` after an update installs (the updater crate
# itself is desktop-gated below). Works on every platform, so it lives here.
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
# version-neutral HWND extraction for wincast.rs (avoids depending on tauri's
# internal `windows`-crate version unifying with ours; 0.6 = what tauri 2 impls)
raw-window-handle = "0.6"
serde_json = { version = "1", features = ["preserve_order"] }
walkdir = "2"
ignore = "0.4"
base64 = "0.22"
# Control plane (Tier 2): a tiny localhost-only HTTP server so an external agent
# (the osai-control MCP / curl / the WhatsApp bridge) can drive the app. Blocking +
# dependency-light; runs on its own thread (see control.rs). Off by default.
tiny_http = "0.12"
# 256-bit control-plane bearer token from the OS CSPRNG (control.rs gen_token).
# Pinned to 0.2 for the `getrandom(&mut buf)` API regardless of what else the
# tree resolves; the OS backend needs no extra config on Windows/macOS/Linux.
getrandom = "0.2"
# BYO-key API keys (Tier 4) stored in the OS keychain — Windows Credential
# Manager / macOS Keychain / Linux Secret Service — never localStorage. See
# apikeys.rs. Default features pull in the platform-native backend.
keyring = "2"
# BYO-key API tier (Tier 4): blocking HTTP to a provider (Anthropic / OpenAI /
# OpenRouter / Ollama) with the user's own key, on the chat reader thread (so no
# tokio runtime needed there). rustls so there's no openssl/native-tls on Windows
# (sqlx already pulls rustls). See chat_api.rs (pure) + chat.rs run_api_turn (I/O).
# `multipart` feeds the dictation upload (voice.rs transcribe_audio — WAV as a
# multipart `file` field, same wire shape whisper.cpp and OpenAI both expect).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
# Files-pane delete goes to the OS trash (Recycle Bin / macOS Trash) so a
# mis-click is recoverable — never a hard unlink of a folder tree.
trash = "5"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
parking_lot = "0.12"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "mysql",
  "chrono",
  "json",
  "bigdecimal",
  "uuid",
] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Desktop-only: in-app self-update from GitHub Releases (signed minisign).
# The updater crate has NO mobile support, so it's gated to desktop targets
# (Cargo has no `cfg(desktop)`, hence the not-android/ios form Tauri's own
# template uses); registration is likewise `#[cfg(desktop)]` in lib.rs. See
# RELEASING.md for the build-sign-publish flow.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# macOS-only: flip the WKWebView element-fullscreen preference (off by default)
# so YouTube/video fullscreen works inside browser panes. Pinned to the same
# objc2-web-kit version tauri 2.11 uses so the WKWebView types unify.
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSDate", "NSSet", "NSArray", "NSError"] }
objc2-web-kit = { version = "0.3", features = ["WKContentRuleList", "WKContentRuleListStore", "WKUserContentController", "WKWebView", "WKWebViewConfiguration", "WKPreferences", "WKFindConfiguration", "WKFindResult", "WKWebsiteDataStore", "WKWebsiteDataRecord", "block2"] }

# ── ScreenCaptureKit "native app as a pane" spike (appcast.rs) ───────────────
# Live-mirror a single foreign macOS window into an OSAI pane: SCK captures the
# window's backing store as GPU-resident IOSurface frames, which we assign to a
# CALayer-backed NSView child of the main window (zero-copy, frames never touch
# JS). Lower-level objc2-* bindings (NOT the high-level `screencapturekit`
# crate) are used so every type unifies with the objc2 0.6 / objc2-* 0.3 stack
# objc2-web-kit already pins — a divergent objc2 version would make the WKWebView
# and SCK NSObject worlds incompatible. Requires macOS 12.3+. See SPIKE-screencapturekit.md.
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSResponder", "NSGraphics", "NSColor", "NSEvent"] }
objc2-screen-capture-kit = { version = "0.3", features = ["SCStream", "SCShareableContent", "SCError", "objc2-core-media", "objc2-core-graphics", "block2", "dispatch2"] }
objc2-core-media = { version = "0.3", features = ["CMSampleBuffer", "CMTime"] }
objc2-core-video = { version = "0.3", features = ["CVImageBuffer", "CVPixelBuffer", "CVPixelBufferIOSurface", "CVBuffer", "objc2-io-surface"] }
objc2-io-surface = { version = "0.3", features = ["IOSurface", "IOSurfaceRef", "objc2"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "objc2-core-foundation"] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
dispatch2 = "0.3"
# Phase B input forwarding (appcast.rs): synthesize + post CGEvents to the
# captured app's process. Already in the tree transitively (via web-kit/ICU);
# pulled in directly so we can enable the `elcapitan` feature (CGEventPostToPid /
# `post_to_pid`) and `highsierra` (CGEventCreateScrollWheelEvent2 / scroll). The
# high-level `CGEvent` wrapper is its own foreign_type — we only touch its
# geometry::CGPoint at the post boundary, everything else stays objc2.
core-graphics = { version = "0.25", features = ["elcapitan", "highsierra"] }

# ── Windows-only: native WebView2 (Chromium) control for the embedded browser ──
# Reach the real ICoreWebView2 via Tauri's `with_webview` → PlatformWebview::controller()
# to drive eval-with-result (ExecuteScript), real Back/Forward/Reload/nav-state, and
# NavigationCompleted load-errors — replacing the fire-and-forget `eval` stubs that
# only walked the page's own SPA history. Pinned to the EXACT webview2-com/windows
# versions wry 0.55 uses so `PlatformWebview::controller()`'s type unifies (a divergent
# version would make the ICoreWebView2Controller worlds incompatible — same reasoning
# as the objc2 pin above).
[target.'cfg(windows)'.dependencies]
webview2-com = "=0.38.2"
# Win32_System_Com (IStream) + Win32_UI_Shell (SHCreateMemStream) back the native
# WebView2 CapturePreview screenshot — captures the webview's own content buffer
# (correct resolution, DPI-immune) instead of a screen-region grab that broke under
# Windows display scaling.
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell",
  # ── wincast.rs: Windows.Graphics.Capture "native app as a pane" (W4-8b) ──
  # The Windows twin of appcast.rs: capture a foreign window's frames on the
  # GPU and present them into a child HWND floated over the React slot.
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
  "Graphics",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Foundation",
] }
